--- a/ES6-Hello-world/Makefile
+++ b/ES6-Hello-world/Makefile
@@ -2,13 +2,18 @@ ARCH=arm
 GCC=/usr/local/xtools/arm-unknown-linux-uclibcgnueabi/bin/arm-unknown-linux-uclibcgnueabi-
 obj-m := src/kernel/helloWorld.o
 KDIR := ~/felabs/sysdev/tinysystem/linux-2.6.34/
+DIR=src/user/
+TARGET := test
 
-default: kernel
+default: kernel $(TARGET)
 
 kernel:
-	$(MAKE) ARCH=arm CROSS_COMPILE=$(GCC) -C $(KDIR) M=$(PWD) -o BUILDIR/$@  modules 
+	$(MAKE) ARCH=arm CROSS_COMPILE=$(GCC) -C $(KDIR) M=$(PWD) -o $@ $^  modules 
+	rm src/kernel/*.o 
 
-userSpace:
+$(TARGET):
+	$(GCC)gcc $(DIR)$(TARGET).c -o $(DIR)$(TARGET)
 
 clean:
 	$(MAKE) -C $(KDIR) M=$(PWD) clean
+	rm $(DIR)/$(TARGET)
