--- a/peek-poke/Makefile
+++ b/peek-poke/Makefile
@@ -1,9 +1,9 @@
 ARCH=arm
 GCC=/usr/local/xtools/arm-unknown-linux-uclibcgnueabi/bin/arm-unknown-linux-uclibcgnueabi-
-obj-m := src/kernel/rwhr.o
+obj-m := src/kernel/peek-poke.o
 KDIR := ~/felabs/sysdev/tinysystem/linux-2.6.34/
 DIR=src/user/
-TARGET := readRTC
+TARGET := user-peek-poke
 
 default: kernel $(TARGET)
 
