Add hello world

--- a/peek-poke/part1/Makefile
+++ b/peek-poke/part1/Makefile
@@ -1,12 +1,15 @@
+DIR=src/user/
 ARCH=arm
 GCC=/usr/local/xtools/arm-unknown-linux-uclibcgnueabi/bin/arm-unknown-linux-uclibcgnueabi-
-DIR=src/user/
 TARGET := readRTC
 
-default: $(TARGET)
+default:
+	gcc $(DIR)$(TARGET).c -o $(DIR)$(TARGET)
 
-$(TARGET):
+
+arm:
 	$(GCC)gcc $(DIR)$(TARGET).c -o $(DIR)$(TARGET)
+
 
 clean:
 	rm $(DIR)/$(TARGET)
