--- a/peek-poke/.vscode/settings.json
+++ b/peek-poke/.vscode/settings.json
@@ -1,5 +1,14 @@
 {
     "files.associations": {
-        "iostream": "c"
+        "iostream": "c",
+        "istream": "c",
+        "optional": "c",
+        "ostream": "c",
+        "ratio": "c",
+        "system_error": "c",
+        "type_traits": "c",
+        "chrono": "c",
+        "module.h": "c",
+        "kernel.h": "c"
     }
 }
