--- a/peek-poke/.vscode/settings.json
+++ b/peek-poke/.vscode/settings.json
@@ -12,6 +12,9 @@
         "kernel.h": "c",
         "sysinfo.h": "c",
         "types.h": "c",
-        "typeinfo": "c"
+        "typeinfo": "c",
+        "array": "c",
+        "string_view": "c",
+        "cstddef": "c"
     }
 }
