Joystick and led driver

--- a/gpio/Led/Makefile
+++ b/gpio/Led/Makefile
@@ -1,15 +1,15 @@
 ARCH=arm
 GCC=/usr/local/xtools/arm-unknown-linux-uclibcgnueabi/bin/arm-linux-
-obj-m := src/kernel/pwm.o
+obj-m := led.o
 KDIR := ~/felabs/sysdev/tinysystem/linux-2.6.34/
-DIR=src/user/
-TARGET := user-pwm
+DIR= src/user/
+TARGET := user-led
 
 default: kernel
 
 kernel:
 	$(MAKE) ARCH=arm CROSS_COMPILE=$(GCC) -C $(KDIR) M=$(PWD) -o $@ $^  modules 
-	rm src/kernel/*.o 
+	rm *.o 
 
 $(TARGET):
 	$(GCC)gcc $(DIR)$(TARGET).c -o $(DIR)$(TARGET)
