--- a/gpio/gpio/sys/Makefile
+++ b/gpio/gpio/sys/Makefile
@@ -1,6 +1,6 @@
 ARCH=arm
 GCC=/usr/local/xtools/arm-unknown-linux-uclibcgnueabi/bin/arm-linux-
-obj-m := sys/gpio.o
+obj-m := sys/gpio_sys.o
 KDIR := ~/felabs/sysdev/tinysystem/linux-2.6.34/
 DIR= src/user/
 TARGET := blabla
@@ -10,7 +10,7 @@ default: kernel
 kernel:
 	$(MAKE) ARCH=arm CROSS_COMPILE=$(GCC) -C $(KDIR) M=$(PWD) -o $@ $^  modules 
 	rm sys/*.o 
-	rm sys/.gpio**
+	rm sys/.gpio_sys**
 	rm sys/*.mod.c
 
 $(TARGET):
